debian-installer (2008xxxx) UNRELEASED; urgency=low

  * 

 -- Frans Pop <fjp@debian.org>  Wed, 28 May 2008 18:18:20 +0200

debian-installer (20080522) unstable; urgency=low

  [ Stephen R. Marenka ]
  * Add atari keymaps to pkg-lists for m68k.

  [ Frans Pop ]
  * Lenny will be version 5.0.
  * Improve consistency between x86 syslinux bootmethod help screens.
  * Add nic-usb-modules to netboot images for x86 and ia64.

  [ Otavio Salvador ]
  * Update to 2.6.24-1 kernel (i386, mipsel, arm, armel and amd64).

  [ Robert Millan ]
  * Add images for the versatile platform (armel).

  [ Martin Michlmayr ]
  * Activate the images for the MIPS Malta platform (mips and mipsel),
    thanks Aurelien Jarno.
  * Remove the QEMU flavour on mips and mipsel since it's replaced
    by Malta.
  * Update mips to 2.6.24-1.
  * Use initramfs rather than cramfs on Cobalt since the initrd is too
    large.
  * Use initramfs on MIPS Malta.

  [ Frans Pop ]
  * Remove dropped cdrom-modules kernel udebs from package list for i386,
    amd64 and alpha.
  * Update to 2.6.24-1 kernel for alpha, hppa, ia64, powerpc, s390 and sparc.
  * Remove wireless-tools from package lists as it's not required to configure
    wireless networking.
  * Remove Alastair McKinstry and Joshua Kwan as Uploaders with many thanks
    for their past contributions.

  [ Joey Hess ]
  * The i386 root floppy has been changed to a bare gzipped cpio file,
    null-paddded to the end of the floppy. This needs rootskel-bootfloppy
    version 1.60.
  * Use syslinux's vesamenu for all x86 images except the boot floppy.
  * Split up syslinux config files.
  * Note that the pxelinux config file for serial terminals has been dropped,
    at least for now, since the split config files made it too difficult to
    set up.
  * Note that this needs debian-cd changes to change its code for
    merging syslinux configs when producing i386+amd64 CDs.
  * Document the irqpoll boot parameter. Closes: #477988

  [ Frans Pop ]